k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bvr-nexus
  labels:
    app.kubernetes.io/part-of: bvr-nexus
