k8s/ingress-metrics.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-metrics
  namespace: bvr-nexus
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: metrics.bvrinfra.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: public-metrics
                port:
                  number: 8002
