k8s/ingress-ops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ops
  namespace: bvr-nexus
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: ops.bvrinfra.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ops-console
                port:
                  number: 8002
    - host: ceo.bvrinfra.in
      http:
        paths:
          - path: /ceo
            pathType: Prefix
            backend:
              service:
                name: ops-console
                port:
                  number: 8002
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ops-console
                port:
                  number: 8002
