k8s/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-public
  namespace: bvr-nexus
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: bvrinfra.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: public-site
                port:
                  number: 8003
    - host: www.bvrinfra.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: public-site
                port:
                  number: 8003
